2006-05-21  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_menubar0), (clearlooks_draw_menubar2),
	(clearlooks_draw_menubar1), (clearlooks_draw_menubar),
	(clearlooks_draw_toolbar):
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_style.c: (draw_box):
	* engines/clearlooks/src/clearlooks_types.h:

	Added the three menubar styles.

2006-05-17  Rob Staudinger  <robert.staudinger@gmail.com>

	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
	* engines/smooth/src/engine/smooth_gtk2_rc.c:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.c:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.h:
	Tab highlights for the smooth engine.
	Syntax: "tabs { highlight = TRUE }"

2006-04-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_copy):
	- Fix the copy function. (#338826, Søren Sandmann)

2006-04-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(combo_box_get_seperator_pos), (draw_resize_grip):
	- Two memory leak fixes from Fedora Core
	  (Matthias Clasen <mclasen@redhat.com>)

	* engines/clearlooks/src/clearlooks_style.c: (draw_box):
	- Fix orientation of the fill line for RTL locales
	  (#337381, yairhr@yahoo.com)
	- Prevent the fill line from overshooting the trough.

2006-02-27  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_copy), (clearlooks_style_class_init):
	* engines/industrial/src/industrial_style_versioned_code.h:
	* engines/lighthouseblue/src/lighthouseblue_style.c:
	(lighthouseblue_style_copy), (lighthouseblue_style_class_init):
	* engines/metal/src/metal_gtk2_engine.c: (metal_style_copy),
	(metal_style_class_init):
	Added functions that copy the styles to all engines that save data
	in them. (Fixes: #325760 for real)

2006-02-27  Richard A. Stellingwerff  <remenic@gmail.com>
