@@ -1,6 +1,16 @@
 2006-05-21  Richard A. Stellingwerff  <remenic@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_draw_progressbar_fill):
+	* engines/clearlooks/src/clearlooks_style.c: (draw_box):
+	* engines/clearlooks/src/clearlooks_types.h:
+
+	Pulsing progressbars look better now.
+	100% progressbars don't draw end line.
+
+2006-05-21  Richard A. Stellingwerff  <remenic@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
 	(clearlooks_draw_menubar0), (clearlooks_draw_menubar2),
 	(clearlooks_draw_menubar1), (clearlooks_draw_menubar),
 	(clearlooks_draw_toolbar):
